# services/user/validation.go
@@ -35,3 +35,13 @@ func (v *validationService) Register(ctx *gin.Context, in *models.AuthInput) *ve
 
 	return v.next.Register(ctx, in)
 }
+
+// Login implements models.UserService.
+func (v *validationService) Login(ctx *gin.Context, in *models.AuthInput) *vendora.BaseResult {
+	err := validations.Validate(in, v.schema)
+	if err != nil {
+		return err
+	}
+
+	return v.next.Register(ctx, in)
+}
